added order source display, fixed search field type

--- a/app/views/allocation_orders/edit.html.erb
+++ b/app/views/allocation_orders/edit.html.erb
@@ -4,6 +4,7 @@
 
     <h2>Order to pack: <%= @allocation_order.order_num %></h2>
     <h2>Basket Number: <%= @basket_num %></h2>
+    <h2> Order Source: <%= @order_source %></h2>
 
 
     <table>
