--- a/app/views/direct_bin_contents/index.html.erb
+++ b/app/views/direct_bin_contents/index.html.erb
@@ -9,7 +9,7 @@
 
     <!-- Search input-->
     <div class="control-group">
-      <label class="control-label" for="search">Basket Number</label>
+      <label class="control-label" for="search">Item code or Bin code</label>
       <div class="controls">
         <input id="search" name="search" class="input-medium search-query" type="text">
       </div>
