--- a/app/views/baskets/index.html.erb
+++ b/app/views/baskets/index.html.erb
@@ -7,7 +7,7 @@
     <legend>Filters</legend>
 
     <div class="control-group">
-      <label class="control-label" for="search" style="width:220px;">Basket Number or Order Number</label>
+      <label class="control-label" for="search">Basket or Order Number</label>
       <div class="controls">
         <input id="search" name="search" class="input-medium search-query" type="text">
       </div>
