spelling, fields to fct_rpro_sos

--- a/app/views/fct_rpro_sos/sales_order.html.erb
+++ b/app/views/fct_rpro_sos/sales_order.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Ecommerce Order Search') %>
-<h1>Gift Cards</h1>
+<h1>Ecommerce order cross reference</h1>
 
 
 <form class="form-horizontal">
