--- a/app/views/static_pages/load.html.erb
+++ b/app/views/static_pages/load.html.erb
@@ -31,6 +31,7 @@
           <option> c3demand.fct_order_replen </option>
           <option> c3demand.fct_planned_store_rng </option>
           <option> c3demand.fct_post_launch_adj_hist </option>
+          <option> c3demand.fct_post_launch_le_fc </option>
           <option> c3demand.fct_post_launch_new </option>
           <option> c3demand.fct_post_launch_new_tester </option>
           <option> c3demand.fct_pre_launch_new </option>
