manual connotes menu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Ecommerce Order # lookup", sales_order_path %></li>
-                  <li class="divider"></li>
+                  <li><%= link_to "Manual Connotes", '#' %></li>
                 </ul>
               </li>
           <% end %>
