--- a/app/views/static_pages/load_mecca.html.erb
+++ b/app/views/static_pages/load_mecca.html.erb
@@ -7,24 +7,25 @@
     <legend>Choose a table to load!</legend>
     File needs to be in w:/demand/, with a name that matches the table, an extension of csv and no spaces </p>
       Example: w:/demand/fct_event_fc.csv </p>
+      All upload tables are truncated (emptied) prior to load </p>
         <%=select_tag "select_table",
-          "<option> c3demand.fct_adj_hist_comment_mecca </option>
-           <option> c3demand.fct_base_replen_fc_item_format_mecca </option>
-           <option> c3demand.fct_event_fc_inputs_mecca </option>
-           <option> c3demand.fct_event_fc_mecca </option>
-           <option> c3demand.fct_le_fc_inputs_mecca </option>
-           <option> c3demand.fct_le_item_forecast_mecca </option>
-           <option> c3demand.fct_le_tester_fc_mecca </option>
-           <option> c3demand.fct_post_launch_adj_hist_mecca </option>
-           <option> c3demand.fct_post_launch_le_fc_mecca </option>
-           <option> c3demand.fct_post_launch_new_mecca </option>
-           <option> c3demand.fct_post_launch_new_tester_mecca </option>
-           <option> c3demand.fct_pre_launch_new_fc_inputs_mecca </option>
-           <option> c3demand.fct_pre_launch_new_mecca </option>
-           <option> c3demand.fct_pre_launch_new_tester_mecca </option>
-           <option> c3demand.fct_promo_uplift_fc_inputs_mecca </option>
-           <option> c3demand.fct_promo_uplift_fc_mecca </option>
-           <option> c3demand.fct_replen_tester_fc_mecca </option>".html_safe, class: "input-xlarge"
+          "<option> c3demand.fct_adj_hist_comment_mecca_upload </option>
+           <option> c3demand.fct_base_replen_fc_item_format_mecca_upload </option>
+           <option> c3demand.fct_event_fc_inputs_mecca_upload </option>
+           <option> c3demand.fct_event_fc_mecca_upload </option>
+           <option> c3demand.fct_le_fc_inputs_mecca_upload </option>
+           <option> c3demand.fct_le_item_forecast_mecca_upload </option>
+           <option> c3demand.fct_le_tester_fc_mecca_upload </option>
+           <option> c3demand.fct_post_launch_adj_hist_mecca_upload </option>
+           <option> c3demand.fct_post_launch_le_fc_mecca_upload </option>
+           <option> c3demand.fct_post_launch_new_mecca_upload </option>
+           <option> c3demand.fct_post_launch_new_tester_mecca_upload </option>
+           <option> c3demand.fct_pre_launch_new_fc_inputs_mecca_upload </option>
+           <option> c3demand.fct_pre_launch_new_mecca_upload </option>
+           <option> c3demand.fct_pre_launch_new_tester_mecca_upload </option>
+           <option> c3demand.fct_promo_uplift_fc_inputs_mecca_upload </option>
+           <option> c3demand.fct_promo_uplift_fc_mecca_upload </option>
+           <option> c3demand.fct_replen_tester_fc_mecca_upload </option>".html_safe, class: "input-xlarge"
          %>
 
        <div>
