--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,11 +18,11 @@
                   <li><%= link_to "Truncate tables", truncate_path %></li>
                   <li><%= link_to "Load tables", load_path %></li>
                   <li class="divider"></li>
+                  <li><%= link_to "Upoad tables - Mecca", load_mecca_path %></li>
                   <li><%= link_to "Truncate tables - Mecca", truncate_mecca_path %></li>
-                  <li><%= link_to "Load tables - Mecca", load_mecca_path %></li>
                   <li class="divider"></li>
+                  <li><%= link_to "Upload tables - Kit/Maxima", load_km_path %></li>
                   <li><%= link_to "Truncate tables - Kit/Maxima", truncate_km_path %></li>
-                  <li><%= link_to "Load tables - Kit/Maxima", load_km_path %></li>
                 </ul>
               </li>
           <% end %>
