added menu, changed home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
     This is the home page for the c3ecom application.
   </h2>
   <h2>
-    Premium purveyors of perfect paints, perfumes, powders and I've run out of p-words....
+    Premium purveyors of perfect paints, perfumes, powders and picture perfect product
   </h2>
   <% if !signed_in? %>
      <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
