--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,8 @@
                   <li><%= link_to "Upload tables - Kit/Maxima", load_km_path %></li>
                   <li><%= link_to "Load to Live  - Kit/Maxima", live_load_km_path %></li>
                   <li><%= link_to "Truncate tables - Kit/Maxima", truncate_km_path %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Purchase Order Status ", '#' %></li>
                 </ul>
               </li>
           <% end %>
