--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
                   <li><%= link_to "Load to Live  - Kit/Maxima", live_load_km_path %></li>
                   <li><%= link_to "Truncate tables - Kit/Maxima", truncate_km_path %></li>
                   <li class="divider"></li>
-                  <li><%= link_to "Purchase Order Status ", '#' %></li>
+                  <li><%= link_to "Purchase Order Status ", fct_axima_controls_path %></li>
                 </ul>
               </li>
           <% end %>
