bug fix for load km and mecca controller calls from post

--- a/app/views/static_pages/load_km.html.erb
+++ b/app/views/static_pages/load_km.html.erb
@@ -2,7 +2,7 @@
 <h2>Load - Kit/Maxima</h2>
 
 
-<%= form_tag(controller: 'static_pages', action: 'load', method: "post") do %>
+<%= form_tag(controller: 'static_pages', action: 'load_table_km', method: "post") do %>
     <!-- Form Name -->
     <legend>Choose a table to load!</legend>
     File needs to be in w:/demand/, with a name that matches the table, an extension of csv and no spaces </p>
