--- a/app/views/static_pages/load_mecca.html.erb
+++ b/app/views/static_pages/load_mecca.html.erb
@@ -2,7 +2,7 @@
 <h2>Load - Mecca</h2>
 
 
-<%= form_tag(controller: 'static_pages', action: 'load_mecca', method: "post") do %>
+<%= form_tag(controller: 'static_pages', action: 'load_table_mecca', method: "post") do %>
     <!-- Form Name -->
     <legend>Choose a table to load!</legend>
     File needs to be in w:/demand/, with a name that matches the table, an extension of csv and no spaces </p>
