vendor axima lead times work

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
                   <li><%= link_to "Truncate tables - Kit/Maxima", truncate_km_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Purchase Order Status", fct_axima_controls_path %></li>
-                  <li><%= link_to "Vendor Lead times", '#' %></li>
+                  <li><%= link_to "Vendor Lead times", fct_vendor_axima_leadtimes_path %></li>
                 </ul>
               </li>
           <% end %>
