--- a/app/views/fct_axima_controls/index.html.erb
+++ b/app/views/fct_axima_controls/index.html.erb
@@ -61,7 +61,7 @@
 
 
 <%= will_paginate %>
-
+Please note: the 'Place on Hold' functionality is not yet active - it does nothing.
 <ul class="users">
   <table class="table table-striped">
     <tr>
