added shipment number to fct_axima_control

--- a/app/views/static_pages/load.html.erb
+++ b/app/views/static_pages/load.html.erb
@@ -48,6 +48,10 @@
           <option> c3demand.fct_forecast_same_store </option>
           <option> c3demand.fct_post_launch_le_fc </option>
           <option> c3dss.fct_event_forecast </option>
+          <option> c3dss.fct_brand_event_plan </option>
+          <option> c3dss.fct_brand_header_element </option>
+          <option> c3dss.fct_brand_plan </option>
+          <option> c3dss.fct_brand_plan_header </option>
           <option> c3dss.fct_planned_store </option>
           <option> c3dss.fct_planned_vendor </option>
           <option> c3dss.fct_store_forecast_raw </option>
