--- a/app/views/fct_axima_controls/index.html.erb
+++ b/app/views/fct_axima_controls/index.html.erb
@@ -68,6 +68,7 @@ Please note: the 'Place on Hold' functionality is not yet active - it does nothi
       <th> Order # </th>
       <th> Status </th>
       <th> Vendor Code </th>
+      <th> Shipment #</th>
       <th> On Hold </th>
     </tr>
 
@@ -76,6 +77,7 @@ Please note: the 'Place on Hold' functionality is not yet active - it does nothi
         <td><%= fct_axima_controls.purchase_order_no %></td>
         <td><%= fct_axima_controls.status %></td>
         <td><%= fct_axima_controls.vendor_code %></td>
+        <td><%= fct_axima_controls.shipment_number %></td>
         <td><%= fct_axima_controls.on_hold %></td>
         <td><%= hold_or_remove_hold fct_axima_controls.on_hold %></td>
       </tr>
