added description of axima update and shipments

--- a/app/views/fct_axima_controls/index.html.erb
+++ b/app/views/fct_axima_controls/index.html.erb
@@ -39,6 +39,12 @@
     <td class="tg-031e">55</td>
     <td class="tg-031e">Order cancelled, Axima notified</td>
   </tr>
+  <tr>
+    <td class="tg-031e">Note:</td>
+    <td class="tg-031e">Once an order has a shipment number no further updates are sent</td>
+
+
+  </tr>
 </table>
 
 
@@ -68,7 +74,7 @@ Please note: the 'Place on Hold' functionality is not yet active - it does nothi
       <th> Order # </th>
       <th> Status </th>
       <th> Vendor Code </th>
-      <th> Shipment #</th>
+      <th> Axima Shipment #</th>
       <th> On Hold </th>
     </tr>
 
