--- a/app/views/static_pages/truncate.html.erb
+++ b/app/views/static_pages/truncate.html.erb
@@ -50,6 +50,7 @@
           <option> c3dss.fct_brand_header_element </option>
           <option> c3dss.fct_brand_plan </option>
           <option> c3dss.fct_brand_plan_header </option>
+          <option> c3dss.fct_brand_plan_header_element </option>
           <option> c3dss.fct_planned_store </option>
           <option> c3dss.fct_planned_vendor </option>
           <option> c3dss.fct_store_forecast_raw </option>
