added secret shopper upload

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,8 @@
               <li><%= link_to "Scan Info", fct_store_pick_scans_path %></li>
               <li><%= link_to "Countable Stock", '#' %></li>
               <li class="divider"></li>
+              <li><%= link_to "Load Secret Shopper", load_secret_shopper_path %></li>
+              <li class="divider"></li>
               <li><%= link_to "Help", help_path %></li>
             </ul>
           </li>
