--- a/app/views/static_pages/load_shopper.html.erb
+++ b/app/views/static_pages/load_shopper.html.erb
@@ -2,7 +2,7 @@
 <h2>Load</h2>
 
 
-<%= form_tag(controller: 'static_pages', action: 'load_secret', method: "post") do %>
+<%= form_tag(controller: 'static_pages', action: 'load_shopper', method: "post") do %>
     <!-- Form Name -->
     <legend>Choose a table to load!</legend>
     File needs to be in w:/secretshopper/, with a name that matches the table, an extension of csv and no spaces </p>
