--- a/app/views/fct_vendor_axima_leadtimes/edit.html.erb
+++ b/app/views/fct_vendor_axima_leadtimes/edit.html.erb
@@ -13,6 +13,27 @@
         <%= f.label :lead_time_days %>
         <%= f.text_field :lead_time_days %>
 
+        <%= f.label :order_processing_leadtime %>
+        <%= f.text_field :order_processing_leadtime %>
+
+        <%= f.label :shipping_leadtime_exp %>
+        <%= f.text_field :shipping_leadtime_exp %>
+
+        <%= f.label :shipping_leadtime_exp_haz %>
+        <%= f.text_field :shipping_leadtime_exp_haz %>
+
+        <%= f.label :shipping_leadtime_reg %>
+        <%= f.text_field :shipping_leadtime_reg %>
+
+        <%= f.label :shipping_leadtime_reg_haz %>
+        <%= f.text_field :shipping_leadtime_reg_haz %>
+
+        <%= f.label :whs_processing_time %>
+        <%= f.text_field :whs_processing_time %>
+
+
+
+
         <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
 
