--- a/app/views/fct_vendor_axima_leadtimes/show.html.erb
+++ b/app/views/fct_vendor_axima_leadtimes/show.html.erb
@@ -4,9 +4,21 @@
 </h2>
 <table class="table">
   <tr>
-    <th>Vendor Axima Lead Time</th>
+    <th> Brand Lead Time</th>
+    <th> Order Processing Lead </th>
+    <th> Ship LT EXP </th>
+    <th> Ship LT EXP HAZ </th>
+    <th> Ship LT REG </th>
+    <th> Ship LT REG HAZ </th>
+    <th> WHS Processing </th>
   </tr>
   <tr>
     <td> <%= @fct_vendor_axima_leadtimes.lead_time_days %>  </td>
+    <td> <%= @fct_vendor_axima_leadtimes.order_processing_leadtime %>  </td>
+    <td> <%= @fct_vendor_axima_leadtimes.shipping_leadtime_exp %>  </td>
+    <td> <%= @fct_vendor_axima_leadtimes.shipping_leadtime_exp_haz %>  </td>
+    <td> <%= @fct_vendor_axima_leadtimes.shipping_leadtime_reg %>  </td>
+    <td> <%= @fct_vendor_axima_leadtimes.shipping_leadtime_reg_haz %>  </td>
+    <td> <%= @fct_vendor_axima_leadtimes.whs_processing_time %>  </td>
   </tr>
 </table>
