--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,18 @@
               <li><%= link_to "Help", help_path %></li>
             </ul>
           </li>
+          <% if finance_user? %>
+              <li id="fat-menu" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  Finance <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Truncate Tables - Finance", truncate_finance_path %></li>
+                  <li><%= link_to "Load Tables - Finance", load_finance_path %></li>
+                </ul>
+              </li>
+
+          <% end %>
           <% if demand_user? %>
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
