changed fct_vendor_axima_leadtimes field

--- a/app/views/fct_vendor_axima_leadtimes/edit.html.erb
+++ b/app/views/fct_vendor_axima_leadtimes/edit.html.erb
@@ -10,8 +10,8 @@
         <%= f.text_field :vendor_code, :disabled=>true %>
 
 
-        <%= f.label :lead_time_days %>
-        <%= f.text_field :lead_time_days %>
+        <%= f.label :vendor_turnaround %>
+        <%= f.text_field :vendor_turnaround %>
 
         <%= f.label :order_processing_leadtime %>
         <%= f.text_field :order_processing_leadtime %>
