--- a/app/views/fct_vendor_axima_leadtimes/show.html.erb
+++ b/app/views/fct_vendor_axima_leadtimes/show.html.erb
@@ -4,7 +4,7 @@
 </h2>
 <table class="table">
   <tr>
-    <th> Brand Lead Time</th>
+    <th> Vendor Turnaround</th>
     <th> Order Processing Lead </th>
     <th> Ship LT EXP </th>
     <th> Ship LT EXP HAZ </th>
@@ -13,7 +13,7 @@
     <th> WHS Processing </th>
   </tr>
   <tr>
-    <td> <%= @fct_vendor_axima_leadtimes.lead_time_days %>  </td>
+    <td> <%= @fct_vendor_axima_leadtimes.vendor_turnaround %>  </td>
     <td> <%= @fct_vendor_axima_leadtimes.order_processing_leadtime %>  </td>
     <td> <%= @fct_vendor_axima_leadtimes.shipping_leadtime_exp %>  </td>
     <td> <%= @fct_vendor_axima_leadtimes.shipping_leadtime_exp_haz %>  </td>
