--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -72,7 +72,7 @@
                   CFC Functions <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to " 01 - Select orders from OMS", '#' %></li>
+                  <li><%= link_to " 01 - Select orders from OMS", select_oms_orders_path %></li>
                 </ul>
               </li>
           <% end %>
