Added screen to browse all CFC orders

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -73,6 +73,8 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to " 01 - Select orders from OMS", select_oms_orders_path %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Order Browse", '#' %></li>
                 </ul>
               </li>
           <% end %>
