--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -74,7 +74,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to " 01 - Select orders from OMS", select_oms_orders_path %></li>
                   <li class="divider"></li>
-                  <li><%= link_to "Order Browse", '#' %></li>
+                  <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
                 </ul>
               </li>
           <% end %>
