changed c3ecom to Mecca Brands

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="center hero-unit">
-  <h1>Welcome to c3ecom</h1>
+  <h1>Welcome to Mecca Brands</h1>
 
   <h2>
-    This is the home page for the c3ecom application.
+    This is the home page for the Mecca Brands ecommerce application.
   </h2>
   <h2>
     Premium purveyors of perfect paints, perfumes, powders and picture perfect product
@@ -12,4 +12,4 @@
   <% end %>
 </div>
 
-<%= link_to 'C3 Intranet', 'http://intranet.c3.local/twiki/bin/view/C3' %>
+<%= link_to 'Mecca Brands Intranet', 'http://intranet.c3.local/twiki/bin/view/C3' %>
