--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 
 <header class="navbar navbar-fixed-top">
-  <a class="brand">Cosmetics Cubed</a>
+  <a class="brand">Mecca Brands</a>
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "c3ecom", root_path, id: "logo" %>
