--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <a class="brand">Mecca Brands</a>
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "c3ecom", root_path, id: "logo" %>
+      <%= link_to "Mecca Brands", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
