--- a/app/views/mb_order_statuses/index.html.erb
+++ b/app/views/mb_order_statuses/index.html.erb
@@ -32,7 +32,7 @@
   <% @mb_order_statuses.each do |mb_order| %>
       <tr>
         <td><%= mb_order.order_number %></td>
-        <td><%= mb_order.order_id %></td>
+        <td><%= mb_order.order_guid %></td>
         <td><%= mb_order.priority %></td>
         <td><%= mb_order.order_ecom_status %></td>
       </tr>
