added bulk pick selection

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -73,6 +73,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to " 01 - Select orders from OMS", select_oms_orders_path %></li>
+                  <li><%= link_to " 02 - Bulk Pick selection", select_bulk_pick_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
                 </ul>
