fixes, gift message print

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -76,6 +76,7 @@
                   <li><%= link_to " 02 - Bulk Pick selection", select_bulk_pick_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
+                  <li><%= link_to "Gift Message Print", print_gift_message_path %></li>
                 </ul>
               </li>
           <% end %>
