--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -74,9 +74,10 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to " 01 - Select orders from OMS", select_oms_orders_path %></li>
                   <li><%= link_to " 02 - Bulk Pick selection", select_bulk_pick_path %></li>
+                  <li><%= link_to " 03 - Gift Message Print", print_gift_message_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
-                  <li><%= link_to "Gift Message Print", print_gift_message_path %></li>
+                  <li><%= link_to "Reprint Gift Message", reprint_gift_message_path %></li>
                 </ul>
               </li>
           <% end %>
