--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -76,6 +76,7 @@
                   <li><%= link_to " 02 - Bulk Pick selection", select_bulk_pick_path %></li>
                   <li><%= link_to " 03 - Gift Message Print", print_gift_message_path %></li>
                   <li><%= link_to " 04 - Dispatch Parcels", dispatch_the_parcel_path %></li>
+                  <li><%= link_to " 05 - Complete the Order", ship_the_parcel_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
                   <li><%= link_to "Reprint Gift Message", reprint_gift_message_path %></li>
