added unlock order facilty

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -79,6 +79,7 @@
                   <li><%= link_to " 05 - Complete the Order", ship_the_parcel_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
+                  <li><%= link_to "Unlock Order", unlock_the_order_path %></li>
                   <li><%= link_to "Reprint Gift Message", reprint_gift_message_path %></li>
                 </ul>
               </li>
