--- a/app/views/mb_order_statuses/index.html.erb
+++ b/app/views/mb_order_statuses/index.html.erb
@@ -43,6 +43,14 @@
   <td>Order dispatched, waiting connote number from Dispatcher to ship</td>
 </tr>
 <tr>
+  <td>50</td>
+  <td>Order complete</td>
+</tr>
+<tr>
+  <td>59</td>
+  <td>Order unlocked in OMS and dealt with manually</td>
+</tr>
+<tr>
   <td></td>
   <td>At any stage from status 2..100 a order gift message is available for printing</td>
 </tr>
