--- a/app/views/static_pages/select_oms.html.erb
+++ b/app/views/static_pages/select_oms.html.erb
@@ -15,7 +15,7 @@
           </tr>
           <% @order_choice.each do |order| %>
               <tr>
-                <td><%= check_box_tag 'selected[]', order['order_number'], checked = true %></td>
+                <td><%= check_box_tag 'selected[]', order['order_number'], checked = order['order_selected'].nonzero? %></td>
                 <td><%= order['order_number'] %></td>
                 <td><%= order['priority'] %></td>
               </tr>
