added archive facility for ecom orders

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -81,6 +81,7 @@
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
                   <li><%= link_to "Unlock Order", unlock_the_order_path %></li>
                   <li><%= link_to "Reprint Gift Message", reprint_gift_message_path %></li>
+                  <li><%= link_to "Archive orders(non functional)", archive_orders_path %></li>
                 </ul>
               </li>
           <% end %>
