--- a/app/views/static_pages/dispatch_the.html.erb
+++ b/app/views/static_pages/dispatch_the.html.erb
@@ -11,12 +11,14 @@
           <tr>
             <th><p class="text-left">Selected</p></th>
             <th><p class="text-centre"> Order #</p></th>
+            <th><p class="text-centre"> Order Date</p></th>
             <th><p class="text-centre"> Priority #</p></th>
           </tr>
           <% @dispatch_orders.each do |dispatch_parcel| %>
               <tr>
                 <td><%= check_box_tag 'selected[]', dispatch_parcel['order_number'], checked = false %></td>
                 <td><%= dispatch_parcel['order_number'] %></td>
+                <td><%= dispatch_parcel['order_date'] %></td>
                 <td><%= dispatch_parcel['priority'] %></td>
               </tr>
           <% end %>
