--- a/app/views/static_pages/ship_the.html.erb
+++ b/app/views/static_pages/ship_the.html.erb
@@ -11,6 +11,7 @@
           <tr>
             <th><p class="text-left">Selected</p></th>
             <th><p class="text-centre"> Order #</p></th>
+            <th><p class="text-centre"> Order Date</p></th>
             <th><p class="text-centre"> Priority #</p></th>
             <th><p class="text-centre"> Connote #</p></th>
           </tr>
@@ -18,6 +19,7 @@
               <tr>
                 <td><%= check_box_tag 'selected[]', ship_parcel['order_number'], checked = true %></td>
                 <td><%= ship_parcel['order_number'] %></td>
+                <td><%= ship_parcel['order_date'] %></td>
                 <td><%= ship_parcel['priority'] %></td>
                 <td><%= ship_parcel['connote_reference'] %></td>
               </tr>
