--- a/app/views/static_pages/ship_the.html.erb
+++ b/app/views/static_pages/ship_the.html.erb
@@ -17,7 +17,7 @@
           </tr>
           <% @ship_orders.each do |ship_parcel| %>
               <tr>
-                <td><%= check_box_tag 'selected[]', ship_parcel['order_number'], checked = true %></td>
+                <td><%= check_box_tag 'selected[]', ship_parcel['order_number'], checked = false %></td>
                 <td><%= ship_parcel['order_number'] %></td>
                 <td>
                   <% unless ship_parcel['order_date'].nil? %>
